Significant progress Client can communicate with server and vice versa Several clients supported
pending:
server address should be taken from the connection string
all clients should get other clients' messages (on first connection)
human-readable client names instead of numbered tokens
stability improvement

--- a/RChatShared/RChatShared.csproj
+++ b/RChatShared/RChatShared.csproj
@@ -47,9 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
-    <Compile Include="CommandFactory.cs" />
     <Compile Include="CommandReceiver.cs" />
+    <Compile Include="NetworkOperator.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
